# indi_gersbach_roof

./: CMakeLists.txt  connectionsnap7.cpp  connectionsnap7.h  indi_gersbach_roof.cpp  indi_gersbach_roof.h  indi_gersbach_roof.xml.cmake
cmake_modules/: CMakeCommon.cmake  FindINDI.cmake  FindLibSnap7.cmake  FindNova.cmake  UnityBuild.cmake
